--- a/app/src/main/res/layout/activity_appstar.xml
+++ b/app/src/main/res/layout/activity_appstar.xml
@@ -4,14 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".APPstar"
+    tools:context=".Activity.APPstar"
     android:orientation="vertical"
     android:background="@drawable/startuppage">
 <LinearLayout
 
     android:layout_weight="1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"></LinearLayout>
+    android:layout_height="match_parent">
+
+</LinearLayout>
     <LinearLayout
 
     android:layout_weight="8"
