--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Login">
+    tools:context=".Activity.Login">
 <LinearLayout
     android:gravity="center"
     android:layout_margin="20dp"
@@ -18,9 +18,11 @@
         android:layout_marginTop="10dp"
         android:text="你好啊"/>
     <EditText
+        
         android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/username"/>
 
 </LinearLayout>
  <LinearLayout
@@ -36,10 +38,12 @@
             android:layout_height="match_parent"
             android:text="你好啊"/>
         <EditText
+            
             android:layout_marginLeft="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
+            android:id="@+id/password"
             />
     </LinearLayout>
     <LinearLayout
@@ -53,7 +57,9 @@
             android:layout_marginTop="30dp"
             android:layout_width="200dp"
             android:layout_height="30dp"
-            android:text="登陆"/>
+            android:text="登陆"
+            
+            android:id="@+id/logins"/>
         <Button
             android:background="@color/colorbule"
             android:textColor="#ffffff"
