--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,23 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".Activity.Login">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="58dp"
+        android:orientation="horizontal"
+        >
+        <com.hjq.bar.TitleBar
+            android:id="@+id/loginbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#03BAE6"
+            app:barStyle="transparent"
+            app:leftTitle="返回"
+            app:rightTitle=""
+            app:title="登陆" />
+    </LinearLayout>
 <LinearLayout
+
     android:gravity="center"
     android:layout_margin="20dp"
     android:orientation="horizontal"
@@ -15,31 +31,41 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
-        android:text="你好啊"/>
+
+        android:text="账号"
+        android:textSize="13sp"
+        android:gravity="center_vertical"
+        android:textColorHint="#838383"/>
     <EditText
-        
+        android:background="@drawable/register_fillet"
         android:layout_marginLeft="10dp"
+        android:paddingLeft="10dp"
+        android:textSize="13sp"
+
+        android:hint="请输入账号"
+        android:textColorHint="#838383"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/username"/>
 
 </LinearLayout>
  <LinearLayout
-
      android:gravity="center"
         android:layout_margin="20dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:layout_marginTop="10dp"
+            android:gravity="center_vertical"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="你好啊"/>
+            android:text="密码"/>
         <EditText
-            
+            android:paddingLeft="10dp"
+            android:background="@drawable/register_fillet"
             android:layout_marginLeft="10dp"
+            android:hint="请输入密码"
+            android:textSize="13sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
@@ -52,20 +78,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <Button
-            android:background="@color/colorbule"
+            android:background="@drawable/registration_button"
             android:textColor="#ffffff"
             android:layout_marginTop="30dp"
-            android:layout_width="200dp"
-            android:layout_height="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="登陆"
-            
+
             android:id="@+id/logins"/>
         <Button
-            android:background="@color/colorbule"
+            android:background="@drawable/registration_button"
             android:textColor="#ffffff"
             android:layout_marginTop="30dp"
-            android:layout_width="200dp"
-            android:layout_height="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/register_loginbutton"
             android:text="注册"/>
+
     </LinearLayout>
 </LinearLayout>
