--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,11 @@
     android:layout_height="match_parent"
     tools:context=".Activity.MainActivity"
     >
-
+<Button
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/SignOut"
+    android:text="退出登陆"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
