--- a/app/src/main/res/layout/activity_user_data.xml
+++ b/app/src/main/res/layout/activity_user_data.xml
@@ -1,9 +1,171 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Activity.UserData">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="58dp"
+        android:orientation="horizontal"
+        >
+    <com.hjq.bar.TitleBar
+            android:id="@+id/loginbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#03BAE6"
+            app:barStyle="transparent"
+            app:leftTitle="返回"
+            app:rightTitle=""
+            app:title="资料完善" />
+    </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+       <LinearLayout
+           android:layout_marginTop="30dp"
+           android:layout_marginHorizontal="30dp"
+           android:layout_width="match_parent"
+           android:layout_height="40dp"
+           android:orientation="horizontal"
+           android:gravity="center_vertical"
+           android:background="@drawable/register_fillet">
+           <EditText
+               android:textColor="@color/colorblack"
+               android:paddingLeft="17dp"
+               android:id="@+id/nickname"
+               android:background="#00000000"
+               android:layout_width="match_parent"
+               android:layout_height="60dp"
+               android:hint="请输入昵称"
+               android:textSize="13sp"
+               android:gravity="center_vertical"
+               android:minLines="1"
+               android:maxLength="20"
+               android:lines="1"
+               android:textColorHint="#838383"
+               />
+       </LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="13dp"
+            android:layout_marginHorizontal="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+
+            android:background="@drawable/register_fillet">
+            <EditText
+                android:textColor="@color/colorblack"
+                android:paddingLeft="17dp"
+                android:id="@+id/phone"
+                android:background="#00000000"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:hint="请输入手机号"
+                android:inputType="number"
+                android:textColorHint="#838383"
+                android:textSize="13sp"
+                android:gravity="center_vertical"
+                android:minLines="1"
+                android:maxLength="21"
+                android:lines="1"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="13dp"
+            android:layout_marginHorizontal="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:background="@drawable/register_fillet">
+            <TextView
+
+                android:layout_weight="8"
+                android:paddingLeft="17dp"
+                android:text="选择身高"
+                android:id="@+id/height"
+                android:textColor="#ff838383"
+                android:textSize="13sp"
+                android:gravity="center_vertical"
+                android:layout_height="wrap_content"
+                android:textColorHint="#838383"
+                android:layout_width="wrap_content" />
+            <ImageView
+                android:id="@+id/height_selector"
+                android:layout_weight="1"
+                android:layout_width="11dp"
+                android:layout_height="10dp"
+                android:src="@drawable/arrow"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="13dp"
+            android:layout_marginHorizontal="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:background="@drawable/register_fillet">
+            <TextView
+                android:layout_weight="8"
+                android:paddingLeft="17dp"
+                android:text="选择性别"
+                android:textColor="#ff838383"
+                android:textSize="13sp"
+                android:gravity="center_vertical"
+                android:layout_height="wrap_content"
+                android:textColorHint="#838383"
+                android:layout_width="wrap_content"
+                android:id="@+id/sex"/>
+            <ImageView
+                android:layout_weight="1"
+                android:layout_width="11dp"
+                android:layout_height="10dp"
+                android:src="@drawable/arrow"
+                android:id="@+id/sex_selector"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="13dp"
+            android:layout_marginHorizontal="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:background="@drawable/register_fillet">
+            <TextView
+                android:id="@+id/Birthday"
+                android:layout_weight="8"
+                android:paddingLeft="17dp"
+                android:text="请选择生日"
+                android:textColor="#ff838383"
+                android:textSize="13sp"
+                android:gravity="center_vertical"
+                android:layout_height="wrap_content"
+                android:textColorHint="#838383"
+                android:layout_width="wrap_content" />
+            <ImageView
+                android:id="@+id/Birthday_selector"
+                android:layout_weight="1"
+                android:layout_width="11dp"
+                android:layout_height="10dp"
+                android:src="@drawable/arrow"/>
+        </LinearLayout>
+        <Button
+            android:layout_marginTop="38dp"
+            android:layout_marginHorizontal="29dp"
+            android:background="@drawable/registration_button"
+            android:layout_width="wrap_content"
+            android:textColor="#ffffff"
+            android:text="确认"
+            android:textSize="15sp"
+            android:id="@+id/perfect_data"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+
+</LinearLayout>
