--- a/app/src/main/res/layout/activity_user_data.xml
+++ b/app/src/main/res/layout/activity_user_data.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Activity.UserData">
+    tools:context=".LoginSystemActivity.UserData">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="58dp"
