--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -92,8 +92,8 @@
             android:background="@drawable/registration_button"
             android:textColor="#ffffff"
             android:layout_marginTop="30dp"
-            android:layout_width="317dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/register_loginbutton"
             android:text="注册"/>
 
