--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorbule">#00BFFF</color>
     <color name="colorblack">#192129</color>
+    <color name="write">#ffffff</color>
 </resources>
