--- a/app/src/main/res/layout/activity_publish.xml
+++ b/app/src/main/res/layout/activity_publish.xml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activity.fragment.ClassifyFragment">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+        <com.hjq.bar.TitleBar
+            android:id="@+id/publish_tobar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#03BAE6"
+            app:barStyle="transparent"
+            app:leftTitle="返回"
+            app:rightTitle=""
+            app:title="发布" />
         <LinearLayout
             android:orientation="horizontal"
             android:layout_margin="10dp"
