--- a/app/src/main/res/layout/fragment_classify.xml
+++ b/app/src/main/res/layout/fragment_classify.xml
@@ -14,7 +14,7 @@
         app:barStyle="transparent"
         app:backButton="false"
         app:rightTitle="发布"
-        app:title="首页" />
+        app:title="分类" />
     <android.support.v7.widget.RecyclerView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
