完善UI上传功能

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorbule">#00BFFF</color>
     <color name="colorblack">#192129</color>
     <color name="write">#ffffff</color>
+    <color name="button">#03BAE6</color>
 </resources>
