--- a/app/src/main/res/drawable/registration_button.xml
+++ b/app/src/main/res/drawable/registration_button.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <size android:width="317dp"
         android:height="40dp"/>
-    <solid android:color="#03BAE6" />
+    <solid android:color="@color/button" />
     <corners android:topLeftRadius="15dp" android:topRightRadius="15dp" android:bottomLeftRadius="15dp" android:bottomRightRadius="15dp" />
 </shape>
