--- a/app/src/main/res/layout/activity_publish.xml
+++ b/app/src/main/res/layout/activity_publish.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Activity.fragment.ClassifyFragment">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+<ScrollView 
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:background="#F3F3F3"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+<LinearLayout android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#F3F3F3"
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android">
         <com.hjq.bar.TitleBar
             android:id="@+id/publish_tobar"
             android:layout_width="match_parent"
@@ -20,58 +21,99 @@
             app:rightTitle=""
             app:title="发布" />
         <LinearLayout
-            android:orientation="horizontal"
-            android:layout_margin="10dp"
             android:layout_width="match_parent"
-            android:layout_height="40dp">
+            android:layout_height="185dp"
+            android:background="@color/write"
+            android:orientation="vertical">
+            <EditText
+                android:id="@+id/upload_context"
+                android:padding="12dp"
+                android:maxLength="20"
+                android:maxLines="3"
+                android:gravity="top"
+                android:hint="请输入您想要说明的一段话"
+                android:textColorHint="#838383"
+                android:textSize="14dp"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:background="@color/write"/>
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="拍照"
-                android:id="@+id/select_images"/>
-            <Button
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="单选照片"
-                android:id="@+id/sgin"
-                />
-            <Button
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="多选"
-                android:id="@+id/Multiselect"/>
+                
+                android:id="@+id/select_phton"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/upload_image"
+                android:layout_gravity="left"
+                android:layout_marginLeft="10dp"/>  
         </LinearLayout>
-
-        <LinearLayout
+          
+        
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center">
-            <TextView
-                android:id="@+id/image_url"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
-            <ImageView
-                android:layout_margin="20dp"
-                android:scaleType="center"
-                android:layout_width="500dp"
-                android:id="@+id/images"
-                android:layout_height="300dp"
-                />
-            <Button
-                android:id="@+id/publish_image"
-                android:text="上传图片"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            android:layout_height="13dp"
+            android:background="#F3F3F3"/>
+    <LinearLayout
+        android:id="@+id/Exhibition_phton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/write"
+        android:orientation="horizontal">
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/upload_phton"
+            android:background="@color/write"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        </LinearLayout>
+        </android.support.v7.widget.RecyclerView>
     </LinearLayout>
+      
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="13dp"
+            android:background="#F3F3F3"/>
+        <LinearLayout
+            
+            android:background="@color/write"
+            android:id="@+id/upload_type"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="62dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" 
+                android:paddingLeft="10dp"
+                android:text="意见类型"
+                android:textSize="16dp"
+                android:layout_weight="1"
+                />
+            <TextView
+                android:id="@+id/typetextview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" 
+                android:text="未选择"
+                android:layout_marginRight="34dp"
+                android:textSize="16dp"/>
+            <ImageView
+                android:layout_gravity="right|center_vertical"
+              
+                android:layout_marginRight="16dp"
+                android:layout_width="8dp"
+                android:layout_height="14dp" 
+                android:background="@drawable/fanhui"/>
+        </LinearLayout>
+        <Button
+            android:id="@+id/upload_button"
+            android:layout_marginTop="37dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="发布内容"
+            android:textSize="16dp"
+            android:textColor="@color/write"
+            android:background="@drawable/uploadbutton"/>
+    </LinearLayout>
+</ScrollView>
 
 
-
-
-</FrameLayout>
