--- a/app/src/main/res/layout/activity_user_data.xml
+++ b/app/src/main/res/layout/activity_user_data.xml
@@ -29,7 +29,7 @@
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="30dp"
-           android:layout_width="match_parent"
+           android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
@@ -53,7 +53,7 @@
         <LinearLayout
             android:layout_marginTop="13dp"
             android:layout_marginHorizontal="30dp"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:orientation="horizontal"
             android:gravity="center_vertical"
@@ -101,7 +101,8 @@
                 android:layout_weight="1"
                 android:layout_width="11dp"
                 android:layout_height="10dp"
-                android:src="@drawable/arrow"/>
+                android:src="@drawable/arrow"
+                android:layout_gravity="right|center_vertical"/>
         </LinearLayout>
         <LinearLayout
             android:layout_marginTop="13dp"
@@ -127,7 +128,8 @@
                 android:layout_width="11dp"
                 android:layout_height="10dp"
                 android:src="@drawable/arrow"
-                android:id="@+id/sex_selector"/>
+                android:id="@+id/sex_selector"
+                android:layout_gravity="right|center_vertical"/>
         </LinearLayout>
         <LinearLayout
             android:layout_marginTop="13dp"
