--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Activity.fragment.MyFragment">
 <Button
     android:layout_width="wrap_content"
@@ -11,7 +12,8 @@
     android:text="退出登陆"
     android:id="@+id/SignOut"/>
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.amap.api.maps.MapView
+        android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
