--- a/app/src/main/res/layout/classify_muen.xml
+++ b/app/src/main/res/layout/classify_muen.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/classify_button"
-    android:layout_margin="10dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginTop="5dp"
     android:orientation="vertical"
     android:gravity="center_horizontal">
 
         <ImageView
             android:id="@+id/classify_images"
             android:layout_marginTop="18dp"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:scaleType="fitCenter"
             android:src="@drawable/classify_3"
             />
