--- a/app/src/main/res/layout/datails_activity.xml
+++ b/app/src/main/res/layout/datails_activity.xml
@@ -37,5 +37,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_weight="9"></LinearLayout>
+        android:layout_weight="9">
+        <TextView
+            android:id="@+id/context"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="你好啊"
+            android:textSize="15dp"
+            android:padding="13px"
+            android:scrollbars="vertical"
+            android:textColor="@color/write"/>
+    </LinearLayout>
 </LinearLayout>
