--- a/app/src/main/res/layout/fragment_classify.xml
+++ b/app/src/main/res/layout/fragment_classify.xml
@@ -16,7 +16,7 @@
         app:rightTitle="发布"
         app:title="分类" />
     <android.support.v7.widget.RecyclerView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/classify_RecyclerView">
 
