--- a/app/src/main/res/layout/home_lateral.xml
+++ b/app/src/main/res/layout/home_lateral.xml
@@ -27,7 +27,11 @@
         android:id="@+id/lateral_head"
         />
     <TextView
+        android:paddingHorizontal="10dp"
         android:id="@+id/lateral_title"
+        android:maxLines="1"
+        android:maxLength="10"
+        android:ellipsize="end"
         android:layout_marginTop="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
