新增列表文章页面

--- a/app/src/main/res/layout/fragment_home_fragent.xml
+++ b/app/src/main/res/layout/fragment_home_fragent.xml
@@ -93,7 +93,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="297dp"/>
 
-
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/artilist"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
         </LinearLayout>
 
 
